# homeplanner

./: .env.example  CODE_REVIEW.md  Dockerfile  README.md  SECURITY-REVIEW.md  TODO.md  homeplanner_endpoints.yml  index.html  package-lock.json  package.json  pyproject.toml
.github/workflows/: deploy.yml
app/admin/: admin.py  models.py
app/cache/: __init__.py  constants.py  invalidation.py  key_builders.py
app/commands/: test.py
app/config/: helpers.py  log_config.py  metadata.py  settings.py
app/database/: db.py  helpers.py  quota.py
app/managers/: auth.py  email.py  security.py  user.py
app/metrics/: __init__.py  custom.py
app/migrations/: env.py
app/migrations/versions/: 2026_01_19_1200-add_floors_table.py  2026_01_19_1230-add_rooms_table.py  2026_01_19_1300-add_tasks_table.py  2026_01_19_1400-add_households_table.py  2026_01_19_1500-add_invitations_table.py  2026_01_26_1200-drop_api_keys_table.py  2026_02_03_1200-change_assigned_user_id_to_int.py  2026_03_08_1200-add_household_id_to_resources.py
app/models/: floor.py  household.py  invitation.py  room.py  task.py  user.py
app/resources/: auth.py  floor.py  home.py  household.py  invitation.py  room.py  routes.py  task.py  user.py
app/schemas/request/: floor.py  household.py  invitation.py  room.py  task.py  user.py
app/schemas/response/: floor.py  household.py  invitation.py  room.py  task.py  user.py
app/templates/email/: password_reset.html  welcome.html
docs/: important.md  index.md  project-organization.md  quick-start.md
docs/reference/: api.md
docs/usage/: admin-panel.md  caching.md  metrics.md
docs/usage/configuration/: environment.md
src/: App.jsx  index.css  theme.js
src/components/: AppMockup.jsx  Badge.jsx  Footer.jsx  Icons.jsx  Nav.jsx  Section.jsx  SectionTitle.jsx
src/pages/: AboutPage.jsx  FeaturesPage.jsx  HomePage.jsx  PricingPage.jsx
tests/: conftest.py
tests/integration/: test_admin_routes.py  test_cache.py  test_floor_routes.py  test_household_routes.py  test_metrics_endpoint.py  test_protected_user_routes.py  test_task_routes.py  test_user_routes.py
tests/unit/: test_cache.py  test_security.py
wireframes/: wireframes.jsx
